# csWiki

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  generateTOC.py  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/GitHub/: Actions.md  CreateWiki.md  GitHub.md
docs/git/: 00-gitMiniCheatSheet.md  10-setup.md  15-gitStash.md  20-meldForMergeAndDiff.md  30-multiAccount.md  40-multiAccount-detailed.md  50-historyAndIdentity.md  git.md  historyAndIdentity.md  meldForMergeAndDiff.md  multiAccount-detailed.md  multiAccount.md  setup.md
docs/gitHub/: Actions.md  CreateWiki.md  SSH-Keys.md  gitHub.md
docs/python/: 00-pytest-skip-options.md  10-pytest-debug-vscode.md  20-setup-vs-code-project.md  python.md
src/toc_generator/: __init__.py  cli.py  markdown_utils.py  report.py  toc.py  tree.py  writer.py
tests/: test_report.py  test_toc.py  test_tree.py  test_writer.py
tests/toc_generator/: test_cli.py  test_markdown_utils.py
