[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cswiki-toc"
version = "0.1.0"
description = "Recursive table-of-contents generator for markdown documentation"
authors = [
  { name = "Simone Ceriani", email = "simone.ceriani@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["toc_generator"]

[project.scripts]
cstoc = "toc_generator.cli:main"

# dependencies could go here
# dependencies = []

[project.optional-dependencies]
# development tools (tests, linting, type checking)
dev = [
    "pytest",
    "mypy",
    "ruff",
    "black",
    "pre-commit"
]

# ===============================
# Black — Code Formatter
# ===============================
[tool.black]

# Maximum line length before Black wraps code.
line-length = 120

# Python versions Black should format for.
# This enables formatting that is compatible with Python 3.11 syntax.
target-version = ["py311"]


# ===============================
# Ruff — Linter + Formatter
# ===============================
[tool.ruff]

# Maximum allowed line length for linting.
# Keep it consistent with Black to avoid conflicts.
line-length = 120

# Target Python version for rule selection / parsing.
target-version = "py311"

[tool.ruff.lint]
# Enabled rule groups:
# E  -> Pycodestyle errors (style issues)
# F  -> Pyflakes (logical errors / unused imports)
# I  -> Import sorting
# B  -> Bugbear (common bug patterns)
select = ["E", "F", "I", "B"]

[tool.ruff.format]
# Force double quotes in formatted code.
# This keeps formatting consistent across the project.
quote-style = "double"

# ===============================
# MyPy — Static Type Checker
# ===============================
[tool.mypy]

# Python version used for type checking.
python_version = "3.11"

# Enables strict type checking mode.
# This makes mypy behave like a production-grade type checker.
# It enables:
# - No implicit Any
# - Strict optional checks
# - Unused ignore detection
strict = true

# Ignore missing type hints in third-party libraries.
# Many libraries don't ship with typing, so this avoids noise.
ignore_missing_imports = true

# Exclude test files from type checking
exclude = [
    "^tests/",
]

# Treat src/ as a real package root. Do not auto-guess.
explicit_package_bases = true
namespace_packages = true
